Resolve Map page stylsheet issues
* Reduced height of Map and PostList such that a scrollbar doesn't
  appear on that page
* Reduced height of thumbnail images in post list
* Add votes to the post list and removed unused title field

--- a/src/components/MapFrame/MapFrame.css
+++ b/src/components/MapFrame/MapFrame.css
@@ -1,5 +1,5 @@
 #leaflet-container-large {
-    height: 80vh;
+    height: 75vh;
     width: 100%;
   }
 
