--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -3,7 +3,7 @@
 }
 
 .postlist-overall {
-    height: 80vh;
+    height: 75vh;
     width: 100%;
     overflow-y: auto;
 }
@@ -32,6 +32,11 @@
     font-size: 20px;
 }
 
+.postlist-votes {
+    font-size: 15px;
+    color: green;
+}
+
 .postlist-subtitle {
     font-size: 15px;
     color: gray;
@@ -40,5 +45,5 @@
 .postlist-image {
     object-fit: cover;
     width: 95%;
-    height: 100%;
+    max-height: 10vh;
 }
